fixed spacing

--- a/src/_includes/components/css/index.css
+++ b/src/_includes/components/css/index.css
@@ -89,6 +89,7 @@ main h3 {
   border-radius: 8px;
   padding: 4px 8px;
   font-weight: bold;
+  margin-bottom: 0.5rem;
 }
 
 #hero .button {
@@ -163,6 +164,12 @@ footer {
 @media (min-width: 650px) {
   footer {
     padding-bottom: 2rem;
+  }
+}
+
+@media (min-width: 900px) {
+  #hero-text .subtitle {
+    margin-bottom: 0;
   }
 }
 
